--- a/gitops/apps/home-assistant/configuration/blueprints/automation/room_motion_control.yaml
+++ b/gitops/apps/home-assistant/configuration/blueprints/automation/room_motion_control.yaml
@@ -48,53 +48,52 @@ blueprint:
       selector: { entity: { domain: "input_datetime" } }
 
     # ---- Per-window controls (helpers optional; defaults provided)
-    morning_block_helper:
-      name: "(Optional) Block motion ON during Morning (input_boolean)"
+    # Note: motion_activated helpers replace the old block_* helpers
+    # motion_activated=True means motion WILL activate lights, motion_activated=False means it won't
+    morning_motion_activated_helper:
+      name: "(Optional) Morning motion activated (input_boolean)"
       default:
       selector: { entity: { domain: "input_boolean" } }
-    day_block_helper:
-      name: "(Optional) Block motion ON during Day (input_boolean)"
+    day_motion_activated_helper:
+      name: "(Optional) Day motion activated (input_boolean)"
       default:
       selector: { entity: { domain: "input_boolean" } }
-    evening_block_helper:
-      name: "(Optional) Block motion ON during Evening (input_boolean)"
+    evening_motion_activated_helper:
+      name: "(Optional) Evening motion activated (input_boolean)"
       default:
       selector: { entity: { domain: "input_boolean" } }
-    night_block_helper:
-      name: "(Optional) Block motion ON during Night (input_boolean)"
+    night_motion_activated_helper:
+      name: "(Optional) Night motion activated (input_boolean)"
       default:
       selector: { entity: { domain: "input_boolean" } }
 
     morning_auto_off_default:
       name: "Morning auto-off (minutes, default if no helper)"
-      default: 5
+      default: 15
       selector: { number: { min: 0, max: 240, mode: "slider" } }
     morning_auto_off_helper:
       name: "(Optional) Morning auto-off helper (input_number)"
       default:
       selector: { entity: { domain: "input_number" } }
-
     day_auto_off_default:
       name: "Day auto-off (minutes, default if no helper)"
-      default: 5
+      default: 15
       selector: { number: { min: 0, max: 240, mode: "slider" } }
     day_auto_off_helper:
       name: "(Optional) Day auto-off helper (input_number)"
       default:
       selector: { entity: { domain: "input_number" } }
-
     evening_auto_off_default:
       name: "Evening auto-off (minutes, default if no helper)"
-      default: 10
+      default: 15
       selector: { number: { min: 0, max: 240, mode: "slider" } }
     evening_auto_off_helper:
       name: "(Optional) Evening auto-off helper (input_number)"
       default:
       selector: { entity: { domain: "input_number" } }
-
     night_auto_off_default:
       name: "Night auto-off (minutes, default if no helper)"
-      default: 1
+      default: 15
       selector: { number: { min: 0, max: 240, mode: "slider" } }
     night_auto_off_helper:
       name: "(Optional) Night auto-off helper (input_number)"
@@ -111,6 +110,25 @@ variables:
   custom_s2_start_input: !input custom_s2_start
   custom_s3_start_input: !input custom_s3_start
   custom_s4_start_input: !input custom_s4_start
+  
+  # Materialize motion_activated helpers
+  morning_motion_activated_helper_input: !input morning_motion_activated_helper
+  day_motion_activated_helper_input: !input day_motion_activated_helper
+  evening_motion_activated_helper_input: !input evening_motion_activated_helper
+  night_motion_activated_helper_input: !input night_motion_activated_helper
+  
+  # Materialize auto_off helpers
+  morning_auto_off_helper: !input morning_auto_off_helper
+  day_auto_off_helper: !input day_auto_off_helper
+  evening_auto_off_helper: !input evening_auto_off_helper
+  night_auto_off_helper: !input night_auto_off_helper
+  morning_auto_off_default: !input morning_auto_off_default
+  day_auto_off_default: !input day_auto_off_default
+  evening_auto_off_default: !input evening_auto_off_default
+  night_auto_off_default: !input night_auto_off_default
+  
+  room_key_var: !input room_key
+  target_lights_var: !input target_lights
 
   default_s1: "06:00:00"
   default_s2: "09:00:00"
@@ -147,22 +165,92 @@ variables:
     {% elif now_ts >= s3 and now_ts < s4 %}evening
     {% else %}night{% endif %}
 
-  block_morning: "{{ is_state(morning_block_helper, 'on') if morning_block_helper else false }}"
-  block_day: "{{ is_state(day_block_helper, 'on') if day_block_helper else false }}"
-  block_evening: "{{ is_state(evening_block_helper, 'on') if evening_block_helper else false }}"
-  block_night: "{{ is_state(night_block_helper, 'on') if night_block_helper else false }}"
+  # Check motion_activated helpers (per-time-window), fallback to blueprint inputs, then default to True
+  motion_activated_morning: >-
+    {% if morning_motion_activated_helper_input %}
+      {{ is_state(morning_motion_activated_helper_input, 'on') }}
+    {% else %}
+      {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_morning' %}
+      {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
+    {% endif %}
+  motion_activated_day: >-
+    {% if day_motion_activated_helper_input %}
+      {{ is_state(day_motion_activated_helper_input, 'on') }}
+    {% else %}
+      {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_day' %}
+      {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
+    {% endif %}
+  motion_activated_evening: >-
+    {% if evening_motion_activated_helper_input %}
+      {{ is_state(evening_motion_activated_helper_input, 'on') }}
+    {% else %}
+      {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_evening' %}
+      {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
+    {% endif %}
+  motion_activated_night: >-
+    {% if night_motion_activated_helper_input %}
+      {{ is_state(night_motion_activated_helper_input, 'on') }}
+    {% else %}
+      {% set helper = 'input_boolean.motion_activated_' ~ room_key_var ~ '_night' %}
+      {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else true }}
+    {% endif %}
 
   morning_auto_off_mins: >-
-    {{ (states(morning_auto_off_helper) | int(0)) if morning_auto_off_helper else (morning_auto_off_default | int) }}
+    {% if morning_auto_off_helper %}
+      {{ states(morning_auto_off_helper) | int(0) }}
+    {% else %}
+      {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_morning' %}
+      {% set val = states(helper) %}
+      {% if val not in ['unknown', 'unavailable', ''] %}
+        {{ val | int(15) }}
+      {% else %}
+        {{ morning_auto_off_default | int(15) }}
+      {% endif %}
+    {% endif %}
   day_auto_off_mins: >-
-    {{ (states(day_auto_off_helper) | int(0)) if day_auto_off_helper else (day_auto_off_default | int) }}
+    {% if day_auto_off_helper %}
+      {{ states(day_auto_off_helper) | int(0) }}
+    {% else %}
+      {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_day' %}
+      {% set val = states(helper) %}
+      {% if val not in ['unknown', 'unavailable', ''] %}
+        {{ val | int(15) }}
+      {% else %}
+        {{ day_auto_off_default | int(15) }}
+      {% endif %}
+    {% endif %}
   evening_auto_off_mins: >-
-    {{ (states(evening_auto_off_helper) | int(0)) if evening_auto_off_helper else (evening_auto_off_default | int) }}
+    {% if evening_auto_off_helper %}
+      {{ states(evening_auto_off_helper) | int(0) }}
+    {% else %}
+      {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_evening' %}
+      {% set val = states(helper) %}
+      {% if val not in ['unknown', 'unavailable', ''] %}
+        {{ val | int(15) }}
+      {% else %}
+        {{ evening_auto_off_default | int(15) }}
+      {% endif %}
+    {% endif %}
   night_auto_off_mins: >-
-    {{ (states(night_auto_off_helper) | int(0)) if night_auto_off_helper else (night_auto_off_default | int) }}
+    {% if night_auto_off_helper %}
+      {{ states(night_auto_off_helper) | int(0) }}
+    {% else %}
+      {% set helper = 'input_number.motion_auto_off_' ~ room_key_var ~ '_night' %}
+      {% set val = states(helper) %}
+      {% if val not in ['unknown', 'unavailable', ''] %}
+        {{ val | int(15) }}
+      {% else %}
+        {{ night_auto_off_default | int(15) }}
+      {% endif %}
+    {% endif %}
 
-  block_current: >-
-    {% set map = {'morning': block_morning, 'day': block_day, 'evening': block_evening, 'night': block_night} %}
+  motion_activated_current: >-
+    {% set map = {
+      'morning': motion_activated_morning,
+      'day': motion_activated_day,
+      'evening': motion_activated_evening,
+      'night': motion_activated_night
+    } %}
     {{ map[slot] }}
   auto_off_current_mins: >-
     {% set map = {
@@ -195,16 +283,27 @@ action:
             entity_id: !input motion_enabled  # yamllint disable-line quoted-strings
             state: "on"
           - condition: "template"
-            value_template: "{{ not block_current }}"
+            value_template: "{{ motion_activated_current | bool }}"
         sequence:
+          - variables:
+              _fb_var: >-
+                {% if target_lights_var is mapping and 'entity_id' in target_lights_var %}
+                  {{ target_lights_var.entity_id }}
+                {% elif target_lights_var is mapping %}
+                  {{ '' }}
+                {% else %}
+                  {{ target_lights_var }}
+                {% endif %}
           - service: "script.scheduled_light_on"
-            data:
-              room_key: !input room_key  # yamllint disable-line quoted-strings
-              custom_schedule_enabled: "{{ custom_schedule_enabled_input }}"
-              custom_s1_start: "{{ custom_s1_start_input }}"
-              custom_s2_start: "{{ custom_s2_start_input }}"
-              custom_s3_start: "{{ custom_s3_start_input }}"
-              custom_s4_start: "{{ custom_s4_start_input }}"
+            data_template:
+              fallback_lights: "{{ _fb_var }}"
+              timer_mode: false
+              auto_on: true
+              custom_schedule_enabled: "{{ custom_schedule_enabled_input if custom_schedule_enabled_input and custom_schedule_enabled_input != '' and custom_schedule_enabled_input is not none else '' }}"
+              custom_s1_start: "{{ custom_s1_start_input if custom_s1_start_input and custom_s1_start_input != '' and custom_s1_start_input is not none else '' }}"
+              custom_s2_start: "{{ custom_s2_start_input if custom_s2_start_input and custom_s2_start_input != '' and custom_s2_start_input is not none else '' }}"
+              custom_s3_start: "{{ custom_s3_start_input if custom_s3_start_input and custom_s3_start_input != '' and custom_s3_start_input is not none else '' }}"
+              custom_s4_start: "{{ custom_s4_start_input if custom_s4_start_input and custom_s4_start_input != '' and custom_s4_start_input is not none else '' }}"
 
       - conditions:
           - condition: "trigger"
@@ -212,6 +311,8 @@ action:
           - condition: "state"
             entity_id: !input motion_enabled  # yamllint disable-line quoted-strings
             state: "on"
+          - condition: "template"
+            value_template: "{{ motion_activated_current | bool }}"
         sequence:
           - if:
               - condition: "template"
