--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -397,12 +397,17 @@ data:
                 {% set evening_auto_on = states('input_boolean.auto_on_' ~ room ~ '_evening') %}
                 {% set night_auto_on = states('input_boolean.auto_on_' ~ room ~ '_night') %}
                 
-                | Time Slot | Scene | Activation Time | Timer Enabled | Auto-On |
-                |-----------|-------|----------------|---------------|---------|
-                | Morning | `{{ morning_scene }}` | {{ s1 }} | {% if morning_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if morning_auto_on == 'on' %}✓{% else %}✗{% endif %} |
-                | Day | `{{ day_scene }}` | {{ s2 }} | {% if day_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if day_auto_on == 'on' %}✓{% else %}✗{% endif %} |
-                | Evening | `{{ evening_scene }}` | {{ s3 }} | {% if evening_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if evening_auto_on == 'on' %}✓{% else %}✗{% endif %} |
-                | Night | `{{ night_scene }}` | {{ s4 }} | {% if night_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if night_auto_on == 'on' %}✓{% else %}✗{% endif %} |
+                {% set morning_motion = states('input_boolean.motion_activated_' ~ room ~ '_morning') %}
+                {% set day_motion = states('input_boolean.motion_activated_' ~ room ~ '_day') %}
+                {% set evening_motion = states('input_boolean.motion_activated_' ~ room ~ '_evening') %}
+                {% set night_motion = states('input_boolean.motion_activated_' ~ room ~ '_night') %}
+                
+                | Time Slot | Scene | Activation Time | Timer Enabled | Auto-On | Motion Activated |
+                |-----------|-------|----------------|---------------|---------|------------------|
+                | Morning | `{{ morning_scene }}` | {{ s1 }} | {% if morning_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if morning_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if morning_motion == 'on' %}✓{% else %}✗{% endif %} |
+                | Day | `{{ day_scene }}` | {{ s2 }} | {% if day_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if day_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if day_motion == 'on' %}✓{% else %}✗{% endif %} |
+                | Evening | `{{ evening_scene }}` | {{ s3 }} | {% if evening_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if evening_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if evening_motion == 'on' %}✓{% else %}✗{% endif %} |
+                | Night | `{{ night_scene }}` | {{ s4 }} | {% if night_enabled == 'on' %}✓{% else %}✗{% endif %} | {% if night_auto_on == 'on' %}✓{% else %}✗{% endif %} | {% if night_motion == 'on' %}✓{% else %}✗{% endif %} |
                 
                 {% set any_custom = morning_custom == 'on' or day_custom == 'on' or evening_custom == 'on' or night_custom == 'on' %}
                 {% if any_custom %}
@@ -455,6 +460,8 @@ data:
                       - entity: input_select.bedroom_morning_scene
                       - entity: input_boolean.enable_bedroom_morning
                       - entity: input_boolean.auto_on_bedroom_morning
+                      - entity: input_boolean.motion_activated_bedroom_morning
+                      - entity: input_number.motion_auto_off_bedroom_morning
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -473,6 +480,8 @@ data:
                       - entity: input_select.living_room_morning_scene
                       - entity: input_boolean.enable_living_room_morning
                       - entity: input_boolean.auto_on_living_room_morning
+                      - entity: input_boolean.motion_activated_living_room_morning
+                      - entity: input_number.motion_auto_off_living_room_morning
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -491,6 +500,8 @@ data:
                       - entity: input_select.kitchen_morning_scene
                       - entity: input_boolean.enable_kitchen_morning
                       - entity: input_boolean.auto_on_kitchen_morning
+                      - entity: input_boolean.motion_activated_kitchen_morning
+                      - entity: input_number.motion_auto_off_kitchen_morning
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -509,6 +520,8 @@ data:
                       - entity: input_select.bathroom_morning_scene
                       - entity: input_boolean.enable_bathroom_morning
                       - entity: input_boolean.auto_on_bathroom_morning
+                      - entity: input_boolean.motion_activated_bathroom_morning
+                      - entity: input_number.motion_auto_off_bathroom_morning
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -527,6 +540,8 @@ data:
                       - entity: input_select.hallway_morning_scene
                       - entity: input_boolean.enable_hallway_morning
                       - entity: input_boolean.auto_on_hallway_morning
+                      - entity: input_boolean.motion_activated_hallway_morning
+                      - entity: input_number.motion_auto_off_hallway_morning
     
               # Day Schedule Configuration
               - type: conditional
@@ -547,6 +562,8 @@ data:
                       - entity: input_select.bedroom_day_scene
                       - entity: input_boolean.enable_bedroom_day
                       - entity: input_boolean.auto_on_bedroom_day
+                      - entity: input_boolean.motion_activated_bedroom_day
+                      - entity: input_number.motion_auto_off_bedroom_day
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -565,6 +582,8 @@ data:
                       - entity: input_select.living_room_day_scene
                       - entity: input_boolean.enable_living_room_day
                       - entity: input_boolean.auto_on_living_room_day
+                      - entity: input_boolean.motion_activated_living_room_day
+                      - entity: input_number.motion_auto_off_living_room_day
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -583,6 +602,8 @@ data:
                       - entity: input_select.kitchen_day_scene
                       - entity: input_boolean.enable_kitchen_day
                       - entity: input_boolean.auto_on_kitchen_day
+                      - entity: input_boolean.motion_activated_kitchen_day
+                      - entity: input_number.motion_auto_off_kitchen_day
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -601,6 +622,8 @@ data:
                       - entity: input_select.bathroom_day_scene
                       - entity: input_boolean.enable_bathroom_day
                       - entity: input_boolean.auto_on_bathroom_day
+                      - entity: input_boolean.motion_activated_bathroom_day
+                      - entity: input_number.motion_auto_off_bathroom_day
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -619,6 +642,8 @@ data:
                       - entity: input_select.hallway_day_scene
                       - entity: input_boolean.enable_hallway_day
                       - entity: input_boolean.auto_on_hallway_day
+                      - entity: input_boolean.motion_activated_hallway_day
+                      - entity: input_number.motion_auto_off_hallway_day
     
               # Evening Schedule Configuration
               - type: conditional
@@ -639,6 +664,8 @@ data:
                       - entity: input_select.bedroom_evening_scene
                       - entity: input_boolean.enable_bedroom_evening
                       - entity: input_boolean.auto_on_bedroom_evening
+                      - entity: input_boolean.motion_activated_bedroom_evening
+                      - entity: input_number.motion_auto_off_bedroom_evening
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -657,6 +684,8 @@ data:
                       - entity: input_select.living_room_evening_scene
                       - entity: input_boolean.enable_living_room_evening
                       - entity: input_boolean.auto_on_living_room_evening
+                      - entity: input_boolean.motion_activated_living_room_evening
+                      - entity: input_number.motion_auto_off_living_room_evening
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -675,6 +704,8 @@ data:
                       - entity: input_select.kitchen_evening_scene
                       - entity: input_boolean.enable_kitchen_evening
                       - entity: input_boolean.auto_on_kitchen_evening
+                      - entity: input_boolean.motion_activated_kitchen_evening
+                      - entity: input_number.motion_auto_off_kitchen_evening
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -693,6 +724,8 @@ data:
                       - entity: input_select.bathroom_evening_scene
                       - entity: input_boolean.enable_bathroom_evening
                       - entity: input_boolean.auto_on_bathroom_evening
+                      - entity: input_boolean.motion_activated_bathroom_evening
+                      - entity: input_number.motion_auto_off_bathroom_evening
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -711,6 +744,8 @@ data:
                       - entity: input_select.hallway_evening_scene
                       - entity: input_boolean.enable_hallway_evening
                       - entity: input_boolean.auto_on_hallway_evening
+                      - entity: input_boolean.motion_activated_hallway_evening
+                      - entity: input_number.motion_auto_off_hallway_evening
     
               # Night Schedule Configuration
               - type: conditional
@@ -731,6 +766,8 @@ data:
                       - entity: input_select.bedroom_night_scene
                       - entity: input_boolean.enable_bedroom_night
                       - entity: input_boolean.auto_on_bedroom_night
+                      - entity: input_boolean.motion_activated_bedroom_night
+                      - entity: input_number.motion_auto_off_bedroom_night
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -749,6 +786,8 @@ data:
                       - entity: input_select.living_room_night_scene
                       - entity: input_boolean.enable_living_room_night
                       - entity: input_boolean.auto_on_living_room_night
+                      - entity: input_boolean.motion_activated_living_room_night
+                      - entity: input_number.motion_auto_off_living_room_night
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -767,6 +806,8 @@ data:
                       - entity: input_select.kitchen_night_scene
                       - entity: input_boolean.enable_kitchen_night
                       - entity: input_boolean.auto_on_kitchen_night
+                      - entity: input_boolean.motion_activated_kitchen_night
+                      - entity: input_number.motion_auto_off_kitchen_night
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -785,6 +826,8 @@ data:
                       - entity: input_select.bathroom_night_scene
                       - entity: input_boolean.enable_bathroom_night
                       - entity: input_boolean.auto_on_bathroom_night
+                      - entity: input_boolean.motion_activated_bathroom_night
+                      - entity: input_number.motion_auto_off_bathroom_night
               - type: conditional
                 conditions:
                   - entity: input_select.time_window_selector
@@ -803,3 +846,5 @@ data:
                       - entity: input_select.hallway_night_scene
                       - entity: input_boolean.enable_hallway_night
                       - entity: input_boolean.auto_on_hallway_night
+                      - entity: input_boolean.motion_activated_hallway_night
+                      - entity: input_number.motion_auto_off_hallway_night
