--- a/gitops/apps/home-assistant/helpers-input-number-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-number-configmap.yaml
@@ -58,6 +58,35 @@ data:
       step: 1
       unit_of_measurement: "min"
       initial: 30
+    
+    motion_auto_off_bathroom_morning:
+      name: Bathroom - Motion Morning Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_bathroom_day:
+      name: Bathroom - Motion Day Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_bathroom_evening:
+      name: Bathroom - Motion Evening Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_bathroom_night:
+      name: Bathroom - Motion Night Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
   bedroom.yaml: |
     # Template for input_number helpers per room
     # Usage:
@@ -113,6 +142,35 @@ data:
       step: 1
       unit_of_measurement: "min"
       initial: 30
+    
+    motion_auto_off_bedroom_morning:
+      name: Bedroom - Motion Morning Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_bedroom_day:
+      name: Bedroom - Motion Day Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_bedroom_evening:
+      name: Bedroom - Motion Evening Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_bedroom_night:
+      name: Bedroom - Motion Night Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
   hallway.yaml: |
     # Template for input_number helpers per room
     # Usage:
@@ -168,6 +226,35 @@ data:
       step: 1
       unit_of_measurement: "min"
       initial: 30
+    
+    motion_auto_off_hallway_morning:
+      name: Hallway - Motion Morning Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_hallway_day:
+      name: Hallway - Motion Day Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_hallway_evening:
+      name: Hallway - Motion Evening Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_hallway_night:
+      name: Hallway - Motion Night Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
   kitchen.yaml: |
     # Template for input_number helpers per room
     # Usage:
@@ -223,6 +310,35 @@ data:
       step: 1
       unit_of_measurement: "min"
       initial: 30
+    
+    motion_auto_off_kitchen_morning:
+      name: Kitchen - Motion Morning Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_kitchen_day:
+      name: Kitchen - Motion Day Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_kitchen_evening:
+      name: Kitchen - Motion Evening Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_kitchen_night:
+      name: Kitchen - Motion Night Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
   living_room.yaml: |
     # Template for input_number helpers per room
     # Usage:
@@ -278,3 +394,32 @@ data:
       step: 1
       unit_of_measurement: "min"
       initial: 30
+    
+    motion_auto_off_living_room_morning:
+      name: Living Room - Motion Morning Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_living_room_day:
+      name: Living Room - Motion Day Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_living_room_evening:
+      name: Living Room - Motion Evening Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
+    motion_auto_off_living_room_night:
+      name: Living Room - Motion Night Auto-off Timeout
+      min: 0
+      max: 240
+      step: 1
+      unit_of_measurement: "min"
+      initial: 15
