--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -848,3 +848,325 @@ data:
                       - entity: input_boolean.auto_on_hallway_night
                       - entity: input_boolean.motion_activated_hallway_night
                       - entity: input_number.motion_auto_off_hallway_night
+  light_control.yaml: |
+    views:
+      - title: Light Control
+        path: light-control
+        cards:
+          - type: vertical-stack
+            cards:
+              # Room selector
+              - type: entities
+                title: Select Room
+                entities:
+                  - entity: input_select.room_selector
+                    name: Room
+    
+              # Dynamic Room Controls (bedroom, living_room, kitchen, bathroom, hallway)
+              - type: markdown
+                title: Room Lighting Control
+                content: |
+                  {% set room = states('input_select.room_selector') %}
+                  {% if room and room != 'unknown' and room != 'unavailable' %}
+                    ### {{ room|replace('_',' ')|title }} Lighting
+                    
+                    Use the controls below to:
+                    - Turn all room lights on/off
+                    - Adjust individual lights
+                    - Create a scene from current light states
+                  {% else %}
+                    Please select a room above.
+                  {% endif %}
+    
+              # Room Group Control (All lights in room)
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state_not: unknown
+                card:
+                  type: horizontal-stack
+                  cards:
+                    - type: button
+                      name: "All {{ states('input_select.room_selector') | replace('_',' ') | title }} Lights On"
+                      icon: mdi:lightbulb-group
+                      tap_action:
+                        action: call-service
+                        service: light.turn_on
+                        service_data_template:
+                          entity_id: "{{ expand('light.' ~ states('input_select.room_selector')) | map(attribute='entity_id') | list }}"
+                      show_state: false
+                    - type: button
+                      name: "All {{ states('input_select.room_selector') | replace('_',' ') | title }} Lights Off"
+                      icon: mdi:lightbulb-group-off
+                      tap_action:
+                        action: call-service
+                        service: light.turn_off
+                        service_data_template:
+                          entity_id: "{{ expand('light.' ~ states('input_select.room_selector')) | map(attribute='entity_id') | list }}"
+                      show_state: false
+    
+              # Individual Light Controls using Mushroom cards
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: bedroom
+                card:
+                  type: grid
+                  square: false
+                  columns: 2
+                  cards:
+                    - type: custom:mushroom-light-card
+                      entity: light.bedroom
+                      name: Bedroom
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+                    - type: custom:mushroom-light-card
+                      entity: light.bedroom_1
+                      name: Bedroom Light 1
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+                    - type: custom:mushroom-light-card
+                      entity: light.bedroom_2
+                      name: Bedroom Light 2
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+    
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: living_room
+                card:
+                  type: grid
+                  square: false
+                  columns: 2
+                  cards:
+                    - type: custom:mushroom-light-card
+                      entity: light.living_room
+                      name: Living Room
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+                    - type: custom:mushroom-light-card
+                      entity: light.living_room_1
+                      name: Living Room Light 1
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+                    - type: custom:mushroom-light-card
+                      entity: light.living_room_2
+                      name: Living Room Light 2
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+    
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: kitchen
+                card:
+                  type: grid
+                  square: false
+                  columns: 2
+                  cards:
+                    - type: custom:mushroom-light-card
+                      entity: light.kitchen
+                      name: Kitchen
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+                    - type: custom:mushroom-light-card
+                      entity: light.kitchen_1
+                      name: Kitchen Light 1
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+                    - type: custom:mushroom-light-card
+                      entity: light.kitchen_2
+                      name: Kitchen Light 2
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+    
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: bathroom
+                card:
+                  type: grid
+                  square: false
+                  columns: 2
+                  cards:
+                    - type: custom:mushroom-light-card
+                      entity: light.bathroom
+                      name: Bathroom
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+                    - type: custom:mushroom-light-card
+                      entity: light.bathroom_1
+                      name: Bathroom Light 1
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+                    - type: custom:mushroom-light-card
+                      entity: light.bathroom_2
+                      name: Bathroom Light 2
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+    
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: hallway
+                card:
+                  type: grid
+                  square: false
+                  columns: 2
+                  cards:
+                    - type: custom:mushroom-light-card
+                      entity: light.hallway
+                      name: Hallway
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+                    - type: custom:mushroom-light-card
+                      entity: light.entrance_lights
+                      name: Entrance Lights
+                      show_brightness_control: true
+                      show_color_control: true
+                      show_color_temp_control: true
+    
+              # Scene Creation Section
+              - type: markdown
+                title: Create Scene
+                content: |
+                  Adjust the lights above to your desired settings, then:
+                  1. Enter a scene name below
+                  2. Click "Create Scene" to save the current state
+                  
+                  **Note:** You may need to update the light entity list in the dashboard YAML to match your actual light entities.
+    
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: bedroom
+                card:
+                  type: entities
+                  title: Bedroom Scene Creation
+                  entities:
+                    - entity: input_text.scene_name_bedroom
+                      name: Scene Name
+                    - type: button
+                      name: Create Scene from Current Lights
+                      icon: mdi:content-save
+                      tap_action:
+                        action: call-service
+                        service: script.create_scene_from_lights
+                        service_data:
+                          scene_name: "{{ states('input_text.scene_name_bedroom') }}"
+                          scene_id: "bedroom_{{ states('input_text.scene_name_bedroom') | lower | replace(' ', '_') }}"
+                          light_entities:
+                            - light.bedroom
+                            - light.bedroom_1
+                            - light.bedroom_2
+    
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: living_room
+                card:
+                  type: entities
+                  title: Living Room Scene Creation
+                  entities:
+                    - entity: input_text.scene_name_living_room
+                      name: Scene Name
+                    - type: button
+                      name: Create Scene from Current Lights
+                      icon: mdi:content-save
+                      tap_action:
+                        action: call-service
+                        service: script.create_scene_from_lights
+                        service_data:
+                          scene_name: "{{ states('input_text.scene_name_living_room') }}"
+                          scene_id: "living_room_{{ states('input_text.scene_name_living_room') | lower | replace(' ', '_') }}"
+                          light_entities:
+                            - light.living_room
+                            - light.living_room_1
+                            - light.living_room_2
+    
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: kitchen
+                card:
+                  type: entities
+                  title: Kitchen Scene Creation
+                  entities:
+                    - entity: input_text.scene_name_kitchen
+                      name: Scene Name
+                    - type: button
+                      name: Create Scene from Current Lights
+                      icon: mdi:content-save
+                      tap_action:
+                        action: call-service
+                        service: script.create_scene_from_lights
+                        service_data:
+                          scene_name: "{{ states('input_text.scene_name_kitchen') }}"
+                          scene_id: "kitchen_{{ states('input_text.scene_name_kitchen') | lower | replace(' ', '_') }}"
+                          light_entities:
+                            - light.kitchen
+                            - light.kitchen_1
+                            - light.kitchen_2
+    
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: bathroom
+                card:
+                  type: entities
+                  title: Bathroom Scene Creation
+                  entities:
+                    - entity: input_text.scene_name_bathroom
+                      name: Scene Name
+                    - type: button
+                      name: Create Scene from Current Lights
+                      icon: mdi:content-save
+                      tap_action:
+                        action: call-service
+                        service: script.create_scene_from_lights
+                        service_data:
+                          scene_name: "{{ states('input_text.scene_name_bathroom') }}"
+                          scene_id: "bathroom_{{ states('input_text.scene_name_bathroom') | lower | replace(' ', '_') }}"
+                          light_entities:
+                            - light.bathroom
+                            - light.bathroom_1
+                            - light.bathroom_2
+    
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: hallway
+                card:
+                  type: entities
+                  title: Hallway Scene Creation
+                  entities:
+                    - entity: input_text.scene_name_hallway
+                      name: Scene Name
+                    - type: button
+                      name: Create Scene from Current Lights
+                      icon: mdi:content-save
+                      tap_action:
+                        action: call-service
+                        service: script.create_scene_from_lights
+                        service_data:
+                          scene_name: "{{ states('input_text.scene_name_hallway') }}"
+                          scene_id: "hallway_{{ states('input_text.scene_name_hallway') | lower | replace(' ', '_') }}"
+                          light_entities:
+                            - light.hallway
+                            - light.entrance_lights
+    
+    
